Fixed search and delete history button spacing.

--- a/components/sorting/searchBar.module.css
+++ b/components/sorting/searchBar.module.css
@@ -19,25 +19,25 @@
 .search-bar {
   display: flex;
   align-items: center;
-  
   border-radius: 30px;
   /* Rounded edges */
   padding: 30px;
-  background: #4b445360;
+  background: #4b534460;
   width: 400px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   /* Shadow effect */
 }
 
+/* History Ta */
 .selectorSearch {
   text-align: center;
-  width: 80px;
+  width: 100px;
   height: 40px;
-  border-radius: 30px;
+  border-radius: 10px;
   background: #ff0000;
   margin-left: 10px;
   color: white;
-  font-weight: bold;
+  border: none;
 }
 
 /* searchBar.module.css */
@@ -47,15 +47,27 @@
   border: none;
   outline: none;
   font-size: 17px;
-  background: #c2b2b2;
+  border: #5d5b5b solid;
   /* Grey background color */
   padding: 10px;
   border-radius: 30px;
+
+}
+
+
+/* Delete Button */
+.deleteButton {
+  padding-top: 4px;
+}
+
+/* Delete Button */
+.submitButton {
+ margin-top: 4px;
 }
 
 
 .button {
-  background: #ff0000;
+  background: #ff3636;
   /* Red button color */
   color: white;
   border: none;
@@ -71,6 +83,7 @@
   /* Darker red color on hover */
 }
 
+/* Page body */
 .sortSection {
   display: flex;
   justify-content: center;
@@ -79,7 +92,7 @@
   opacity: 84%;
   height: 100%;
   width: 100%;
-  padding-top: 20%;
+  padding-top: 15%;
   z-index: 1;
 }
 
@@ -90,8 +103,10 @@
   position: relative;
   min-width: 150px;
   height: 45px;
+ 
 }
 
+/* Filter by Category */
 .dropdown {
   border-radius: 10px;
   height: 40px;
@@ -99,8 +114,11 @@
   width: 140px;
   background-color: #ff0000;
   color: white;
+  border: none;
 }
 
+
+/* Filter by ingridients */
 .dropdown2 {
   border-radius: 10px;
   height: 40px;
@@ -108,8 +126,10 @@
   width: 140px;
   background-color: #ff0000;
   color: white;
+  border: none;
 }
 
+/*Filter by steps and tags   */
 .recipefilters {
   display: flex;
   align-items: center;
@@ -124,6 +144,7 @@
   background-color: #ff0000;
   width: 140px;
   color: white;
+  border: none;
 
 }
 
@@ -136,23 +157,28 @@
   width: 140px;
   background-color: #ff0000;
   color: white;
+  border: none;
 }
 
+
+/* Overlay */
 .filters {
   text-align: center;
   width: 400px;
-  height: 400px;
+  height: 440px;
   background-color: rgb(255, 255, 255);
   color: white;
-  
+  border: none;
+  border-radius: 10px;
 }
 
 .filterBtn {
   background: #ff0101;
   /* Red button color */
   height: 40px;
-  width: 100px;
+  width: 110px;
   margin-left: 20px;
+  border: none;
 }
 
 
